# Claude-rust

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  00_MASTER_STATUS.txt  @todo-new.md  ALL_TASKS_VERIFIED_AND_MARKED_COMPLETE.txt  CHANGELOG.md  CHEAT_SHEET.md  CLAUD_CODE_RUST_IMPLEMENTATION_COMPLETE.md  CLI_REFERENCE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CONFIG_SYSTEM_README.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  Dockerfile  ENHANCEMENT_SUMMARY.md  ERROR_HANDLING.md  EXECUTIVE_SUMMARY.md  FEATURE_SHOWCASE.md  FINAL_COMPLETION_MARK.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY_REPORT.md  GAP_ANALYSIS.md  HOOKS-QUICK-REFERENCE.md  HOOKS-REMOVAL-SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SPECIFICATION.md  IMPLEMENTATION_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  ISSUE-RESOLUTION.md  Makefile  (+46 more)
.agents/: LEVEL1_IMPLEMENTATION_STATUS.md  agent1-cli-framework.md  agent2-error-handling.md  agent3-logging-system.md  agent4-config-management.md  orchestrator-status.json
.airchitect/: config.json  config.toml  config.yaml
.github/workflows/: coverage.yml
ai/: Cargo.toml
ai/src/: client.rs  error.rs  lib.rs  model_selector.rs  rate_limiter.rs  types.rs
ai/src/providers/: gemini.rs  local.rs  ollama.rs  openai.rs  qwen.rs
auth/src/: account.rs  audit.rs  auth_wizard.rs  lib.rs  manager.rs  tokens.rs  types.rs
auth/tests/: oauth_integration_tests.rs
bindings/: Cargo.toml
bindings/python/: Cargo.toml  ai_cli_py.rs  mod.rs
bindings/typescript/: ai_cli_ts.ts  bridge.ts
cli/src/: app.rs  claude_memory.rs  cli.rs  commands.rs  hooks.rs  interactive.rs  main.rs  settings.gitignore  slash_commands.rs
core/: FILE_OPERATIONS_GUIDE.md  build.rs
core/src/: checkpoint.rs  error_examples.rs  fileops.rs  lib.rs  memory.rs  session.rs
crates/agent-framework/: Cargo.toml
crates/agent-framework/src/: agent.rs  coordinator.rs  lib.rs  workflow.rs
crates/agents/: Cargo.toml
crates/agents/src/: background_processor.rs  delegation.rs  handler.rs  lib.rs  registry.rs  types.rs
crates/ai/: Cargo.toml
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs  orchestration.rs  provider.rs  providers.rs
crates/ai/src/: error.rs  lib.rs  message.rs  provider.rs  rate_limiter.rs  request.rs  task_classifier.rs  types.rs
crates/ai/src/providers/: claude.rs  gemini.rs  lmstudio.rs  local.rs  mod.rs  openai.rs  qwen.rs
crates/auth/: Cargo.toml  OAUTH_IMPLEMENTATION.md  OAUTH_PROVIDER_STATUS.md  OAUTH_QUICK_START.md  OAUTH_SECURITY_AUDIT.md
crates/auth/examples/: oauth_flow_example.rs  oauth_providers.rs
crates/auth/src/: account.rs  audit.rs  auth_wizard.rs  error.rs  lib.rs  manager.rs  multi_provider_manager.rs  oauth_credential_loader.rs  oauth_manager.rs  provider.rs  storage.rs  tokens.rs  types.rs
crates/auth/src/oauth/: file_loader.rs  mod.rs  pkce.rs  providers.rs  server.rs
crates/auth/tests/: oauth_integration_tests.rs
crates/checkpoint/: Cargo.toml
crates/checkpoint/src/: lib.rs  manager.rs  storage.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  commands.rs  first_run.rs  hooks.rs  interactive.rs  lib.rs  main.rs  plugin_manager.rs  print_mode.rs  settings.rs  settings_commands.rs  slash_commands.rs  tool_executor.rs
crates/cli/src/handlers/: analyze.rs  auth.rs  interactive.rs  mod.rs  query.rs
crates/cli/tests/: integration_tests.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: checkpoint.rs  circuit_breaker.rs  config.rs  error.rs  execution.rs  fileops.rs  git_conventional.rs  lib.rs  main.rs  memory.rs  retry.rs  session.rs  types.rs  version.rs
crates/core/src/cli/: middleware.rs  mod.rs  router.rs  validator.rs
crates/core/src/codebase/: analyzer.rs  indexer.rs  mod.rs  scanner.rs  tree.rs
crates/core/src/commands/: executor.rs  handlers.rs  mod.rs
crates/core/src/config/: builder.rs  loader.rs  validation.rs
crates/core/src/logging/: appender.rs  audit.rs  filter.rs  mod.rs
crates/core/tests/: session_tests.rs
crates/hooks/: Cargo.toml
crates/hooks/examples/: README.md  formatting.sh  linting.sh  security_scan.sh  testing.sh
crates/hooks/src/: config.rs  executor.rs  lib.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  filesystem_server.rs  git_server.rs  lib.rs  protocol.rs  server.rs  server_manager.rs  types.rs
crates/memory-system/: Cargo.toml
crates/memory-system/src/: context.rs  lib.rs  storage.rs  vector_store.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: credentials.rs  encryption.rs  lib.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: executor.rs  lib.rs  queue.rs  types.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: error.rs  format.rs  keyboard.rs  lib.rs  prompt.rs  spinner.rs  table.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtin.rs  executor.rs  lib.rs  registry.rs  tool.rs
crates/tui/: Cargo.toml
crates/tui/src/: components.rs  events.rs  lib.rs  renderer.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  error.rs  formatting.rs  fs.rs  lib.rs  logger.rs  logging.rs  network.rs  validation.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
plugins/: README.md  __init__.py  __main__.py  core.py  example_plugin.py  pyproject.toml  requirements.txt
plugins/tests/: __init__.py  fixtures.py  test_plugin_framework.py  test_plugin_security.py
scripts/: build.bat  build.sh  docker-build.bat  docker-build.sh
src/: index.ts  main.ts
src/agents/: AgentRegistry.ts  agent-base.ts  agent-orchestrator.ts  agent.ts  collaboration.ts  delegation.ts  devops.ts  evolution.ts  governance.ts  index.ts  langgraph.ts  memory.ts  orchestrator.ts  parallel-agent.ts  registry.ts  specialized.ts  types.ts
src/analytics/: index.ts
src/checkpoint/: capture.ts  index.ts  manager.ts  restore.ts  storage.ts
src/cli/: CLIBootstrapper.ts  (+10 more)
tests/: README.md  example.test.ts  setup.ts
(+226 files in other folders)
