[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/auth",
    "crates/ai",
    "crates/terminal",
    "crates/utils",
    "crates/mcp",
    "crates/hooks",
    "crates/tasks",
    "crates/agents",
    "crates/tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Contributors"]
license = "MIT"
repository = "https://github.com/anthropic/claude-code"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }

# CLI & Terminal
clap = { version = "4.4", features = ["derive", "cargo"] }
crossterm = "0.27"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
colored = "2.1"
comfy-table = "7.1"

# Authentication
oauth2 = "4.4"
keyring = "2.2"
base64 = "0.21"
sha2 = "0.10"
url = "2.5"

# Compression
flate2 = "1.0"

# Configuration
config = "0.13"
toml = "0.8"
serde_yaml = "0.9"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File System
notify = "6.1"
ignore = "0.4"
walkdir = "2.4"
glob = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

# Async channels
async-channel = "2.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
