[workspace]
members = [
    "crates/core",
    "crates/ai-engine",
    "crates/memory-system",
    "crates/agent-framework",
    "crates/security",
    "crates/checkpoint",
    "crates/tui",
    "crates/providers",
    "crates/utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["AIrchitect Team"]
description = "Advanced AI-powered CLI tool"
license = "MIT"
repository = "https://github.com/aichitect/ai-cli"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env", "color"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
bincode = "1.3"
toml = "0.8"
config = "0.14"
colored = "2.1"
indicatif = "0.17"
crossterm = "0.27"
regex = "1.10"
sha2 = "0.10"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true