[tool.poetry]
name = "ai-cli-python"
version = "1.0.0"
description = "Python plugin framework for AIrchitect CLI"
authors = ["AIrchitect Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.4.2"
typing-extensions = "^4.8.0"
requests = "^2.31.0"
click = "^8.1.7"
rich = "^13.6.0"
toml = "^0.10.2"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true