[package]
name = "claude-code-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
claude-code-core = { path = "../core" }
claude-code-auth = { path = "../auth" }
claude-code-utils = { path = "../utils" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
async-stream = "0.3"

# Other dependencies
regex = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
