[package]
name = "ai-cli-python-bindings"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Python bindings for AIrchitect CLI"
license = "MIT"

[lib]
name = "ai_cli_python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ai-cli-core = { path = "../../crates/core" }
ai-cli-ai-engine = { path = "../../crates/ai-engine" }
ai-cli-memory-system = { path = "../../crates/memory-system" }
ai-cli-agent-framework = { path = "../../crates/agent-framework" }
ai-cli-security = { path = "../../crates/security" }
ai-cli-checkpoint = { path = "../../crates/checkpoint" }
ai-cli-tui = { path = "../../crates/tui" }
ai-cli-providers = { path = "../../crates/providers" }
ai-cli-utils = { path = "../../crates/utils" }

[build-dependencies]
pyo3-build-config = "0.20"