[package]
name = "claude-rust-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
claude-rust-core = { path = "../core" }
claude-rust-utils = { path = "../utils" }
claude-rust-tasks = { path = "../tasks" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
