[package]
name = "claude-code-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
claude-code-core = { path = "../core" }
claude-code-utils = { path = "../utils" }
claude-code-tasks = { path = "../tasks" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
