[package]
name = "claude-code-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace crates
claude-code-core = { path = "../core" }
claude-code-utils = { path = "../utils" }
claude-code-terminal = { path = "../terminal" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
oauth2 = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
rand = "0.8"
dirs = "5.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
