[package]
name = "ai-cli-checkpoint"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Checkpoint and rollback system"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
ai-cli-utils = { path = "../utils" }
ai-cli-security = { path = "../security" }

[dev-dependencies]
tempfile = { workspace = true }