[package]
name = "claude-code-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "claude-code"
path = "src/main.rs"

[dependencies]
# Workspace crates
claude-code-core = { path = "../core" }
claude-code-auth = { path = "../auth" }
claude-code-ai = { path = "../ai" }
claude-code-terminal = { path = "../terminal" }
claude-code-utils = { path = "../utils" }
claude-code-mcp = { path = "../mcp" }
claude-code-hooks = { path = "../hooks" }
claude-code-tasks = { path = "../tasks" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# CLI specific dependencies
rustyline = "14.0"
dirs = "5.0"
ctrlc = "3.4"
walkdir = { workspace = true }
