[package]
name = "claude-rust-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "claude-rust"
path = "src/main.rs"

[dependencies]
# Workspace crates
claude-rust-core = { path = "../core" }
claude-rust-auth = { path = "../auth" }
claude-rust-ai = { path = "../ai" }
claude-rust-terminal = { path = "../terminal" }
claude-rust-utils = { path = "../utils" }
claude-rust-mcp = { path = "../mcp" }
claude-rust-hooks = { path = "../hooks" }
claude-rust-tasks = { path = "../tasks" }
claude-rust-agents = { path = "../agents" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# CLI specific dependencies
rustyline = "14.0"
dirs = "5.0"
ctrlc = "3.4"
walkdir = { workspace = true }
