[package]
name = "claude-code-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

# Tree-sitter dependencies for code analysis
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"

# Command execution dependencies
shell-words = "1.1"

# Additional dependencies for file operations
tempfile = "3.8"
sha2 = { workspace = true }
mime_guess = "2.0"
pathdiff = "0.2"
dirs = "5.0"

# Checkpoint dependencies
flate2 = { workspace = true }
base64 = { workspace = true }
md5 = "0.7"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
