[package]
name = "ai-cli-core"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Core CLI engine for AIrchitect"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
colored = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
ai-cli-utils = { path = "../utils" }
ai-cli-security = { path = "../security" }

[dev-dependencies]
tempfile = { workspace = true }