[package]
name = "ai-cli-memory-system"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Project memory system with LlamaIndex integration"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
ai-cli-utils = { path = "../utils" }
ai-cli-security = { path = "../security" }