[package]
name = "ai-cli-security"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Security layer with credential management"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ai-cli-utils = { path = "../utils" }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"