[package]
name = "ai-cli-tui"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Terminal UI rendering engine"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
ai-cli-utils = { path = "../utils" }
ai-cli-security = { path = "../security" }
crossterm = "0.27"