[package]
name = "ai-cli-utils"
version = "1.0.0"
edition = "2021"
authors = ["AIrchitect Team"]
description = "Shared utilities and helpers"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }