[package]
name = "claude_code_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async Runtime
tokio = { workspace = true, features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Core dependencies
claude-code-core = { path = "../core" }
claude-code-auth = { path = "../auth" }
claude-code-ai = { path = "../ai" }
claude-code-agents = { path = "../agents" }
claude-code-tasks = { path = "../tasks" }
claude-code-tools = { path = "../tools" }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

[lib]
name = "claude_code_web"
path = "src/lib.rs"